Added name of vaccine
